--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,8 @@
 
         .tabs {
             display: flex;
-            background: #f5f5f5;
+            color: black;
+            background: #3e1212;
             border-bottom: 2px solid #ddd;
         }
 
@@ -64,7 +65,7 @@
         }
 
         .tab:hover {
-            background: #e0e0e0;
+            background: #450a0a;
         }
 
         .tab.active {
